fix not visible password on sign/up, and improve css.

--- a/BMI-oxy/style-3.css
+++ b/BMI-oxy/style-3.css
@@ -46,11 +46,11 @@ input[type="number"],
 textarea {
     width: 100%;
     padding: 8px;
+    margin-left: -10px;
     border-radius: 0.5rem;
     border: 1px solid rgba(255, 255, 255, 0.3);
     background: rgba(255, 255, 255, 0.1);
     color: #fff;
-    font-size: 1rem;
     transition: border-color 0.3s ease;
 }
 
@@ -95,7 +95,7 @@ button:hover {
 
 #show-pw-register {
     width: auto;
-    margin: 10px auto;
+    margin: 20px auto;
     padding: 10px 20px;
     background: rgba(0, 0, 0, 0.7);
     border: 1px solid rgba(255, 255, 255, 0.3);
@@ -127,7 +127,7 @@ a:hover {
 /* Responsive Design */
 @media (max-width: 768px) {
     .container {
-        width: 95%;
+        width: 100%;
         padding: 20px;
     }
 
